--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@vx/hierarchy": "latest",
     "@vx/responsive": "latest",
     "@vx/shape": "latest",
+    "bootstrap": "^4.6.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
