--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-scripts": "4.0.3",
     "react-scripts-ts": "^2.13.0",
     "react-window": "^1.8.6",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.2"
   },
